fix Contacts/Socials buttons on mobile

--- a/src/pages/UserEditKendo/sections/About/styles.scss
+++ b/src/pages/UserEditKendo/sections/About/styles.scss
@@ -27,9 +27,12 @@
             padding-top: 4px;
             text-align: center;
             & > span {
+                max-width: 100%;
                 color: red;
                 font-size: 24px;
+                opacity: 0.8;
                 &:hover {
+                    opacity: 1;
                     cursor: pointer;
                 }
             }
